--- a/css/common.blocks/Text/_size/Text_size_l.css
+++ b/css/common.blocks/Text/_size/Text_size_l.css
@@ -1,4 +1,4 @@
 .Text_size_l {
   font-size: var(--text-size-l);
-  line-height: var(--line-height-size-l);
+  line-height: var(--line-height-size-xs);
 }
