--- a/css/common.blocks/Theme/_type/Theme_type_default.css
+++ b/css/common.blocks/Theme/_type/Theme_type_default.css
@@ -27,6 +27,7 @@
   --color-text-secondary: var(--blue-gray-500);
   --color-text-disabled: var(--gray-700);
   --color-text-ghost: var(--gray-800);
+  --color-text-success: var(--green-500);
   --color-text-required: var(--red-500);
 
   --color-bg-primary: var(--white);
@@ -42,6 +43,7 @@
   --color-border-action-focused: var(--yellow-700);
   --color-border-focused: var(--gray-500);
   --color-border-default: var(--gray-250);
+  --color-icon-secondary: var(--gray-500);
 
   /* space */
   --space-xxs: 4px;
@@ -52,12 +54,14 @@
   /* text-size */
   --text-size-s: 13px;
   --text-size-m: 15px;
-  --text-size-l: 18px;
+  --text-size-l: 16px;
+  --text-size-xl: 18px;
 
   /* line-height */
-  --line-height-size-xs: 18px;
+  --line-height-size-xs: 16px;
   --line-height-size-s: 18px;
   --line-height-size-m: 20px;
+  --line-height-size-xl: 22px;
 
   /* breakpoints */
   --breakpoint-size-s: 320px;
