--- a/css/common.blocks/Button/_size/Button_size_m.css
+++ b/css/common.blocks/Button/_size/Button_size_m.css
@@ -2,10 +2,10 @@
   height: 36px;
 }
 
-.Button_size_m .Button_type_action {
+.Button_size_m .Button_view_submit {
   line-height: 36px;
 }
 
-.Button_size_m .Button_type_default {
+.Button_size_m .Button_view_default {
   line-height: 36px;
 }
