--- a/css/common.blocks/Button/_type/Button_type_default.css
+++ b/css/common.blocks/Button/_type/Button_type_default.css
@@ -1,6 +1,4 @@
 .Button_type_default {
-  background-color: var(--color-bg-control);
-  color: var(--color-text-primary);
-  border-color: var(--color-bg-control);
-  font-size: 13px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
