--- a/css/common.blocks/Text/_size/Text_size_l.css
+++ b/css/common.blocks/Text/_size/Text_size_l.css
@@ -2,3 +2,10 @@
   font-size: var(--text-size-l);
   line-height: var(--line-height-size-xs);
 }
+
+@media (min-width: 900px) {
+  .Text_size_l {
+    font-size: var(--text-size-xl);
+    line-height: var(--line-height-size-m);
+  }
+}
