--- a/css/content.blocks/BuildCard/__Description/BuildCard__Description.css
+++ b/css/content.blocks/BuildCard/__Description/BuildCard__Description.css
@@ -2,3 +2,9 @@
   margin-top: 0;
   margin-bottom: 8px;
 }
+
+@media (min-width: 900px) {
+  .BuildCard__Description {
+    margin-bottom: 0;
+  }
+}
