--- a/css/content.blocks/Settings/Settings.css
+++ b/css/content.blocks/Settings/Settings.css
@@ -1,3 +1,11 @@
 .Settings {
   margin-top: 14px;
+  max-width: 474px;
 }
+
+@media (min-width: 900px) {
+  .Settings {
+    margin-top: 8px;
+  }
+}
+
