--- a/css/common.blocks/Button/Button.css
+++ b/css/common.blocks/Button/Button.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   /* padding: var(--space-xs); */
   border-radius: var(--radius-m);
   text-decoration: none;
