--- a/css/common.blocks/Layout/__Container/Layout__Container.css
+++ b/css/common.blocks/Layout/__Container/Layout__Container.css
@@ -2,3 +2,18 @@
   margin-right: var(--space-m);
   margin-left: var(--space-m);
 }
+
+@media (min-width: 600px) {
+  .Layout__Container {
+    margin-right: 50px;
+    margin-left: 50px;
+  }
+}
+
+@media (min-width: 900px) {
+  .Layout__Container {
+    margin-right: 100px;
+    margin-left: 100px;
+    max-width: 825px;
+  }
+}
