--- a/css/content.blocks/BuildCard/__DateInfo/BuildCard__DateInfo.css
+++ b/css/content.blocks/BuildCard/__DateInfo/BuildCard__DateInfo.css
@@ -3,3 +3,10 @@
   align-items: center;
   margin-right: 4px;
 }
+
+@media (min-width: 900px) {
+  .BuildCard_status_list .BuildCard__DateInfo {
+    margin-bottom: 12px;
+    margin-right: 0;
+  };
+}
