--- a/css/content.blocks/BuildCard/__Git/BuildCard__Git.css
+++ b/css/content.blocks/BuildCard/__Git/BuildCard__Git.css
@@ -2,4 +2,19 @@
   margin-bottom: 8px;
   display: flex;
   flex-direction: column;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #f1f2f3;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Git {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .BuildCard_status_list .BuildCard__Git {
+    border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
 }
