--- a/css/content.blocks/Builds/Builds.css
+++ b/css/content.blocks/Builds/Builds.css
@@ -1,5 +1,8 @@
 .Builds {
   margin-top: 8px;
+  margin-bottom: 8px;
   list-style: none;
   padding-left: 0;
+  display: flex;
+  flex-direction: column;
 }
