--- a/css/content.blocks/Field/Field.css
+++ b/css/content.blocks/Field/Field.css
@@ -1,5 +1,5 @@
 .Field {
-  padding-top: var(--space-xs);
-  padding-bottom: var(--space-xs);
+  padding-top: 10px;
+  padding-bottom: 8px;
   position: relative;
 }
