--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   /* padding: var(--space-xs); */
   border-radius: var(--radius-m);
   text-decoration: none;
@@ -185,10 +185,18 @@
   }
 }
 .Form__Action {
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   display: flex;
   flex-direction: column;
+}
+
+@media (min-width: 600px) {
+  .Form__Action {
+    flex-direction: row;
+    padding-bottom: 0;
+    padding-top: 0;
+  }
 }
 .Form__Content {
   margin-bottom: 4px;
@@ -202,8 +210,19 @@
 .Form__SubmitButton {
   margin-bottom: 12px;
 }
+
+@media (min-width: 600px) {
+  .Form__SubmitButton {
+    margin-bottom: 0;
+    margin-right: 8px;
+  }
+}
 .Form__Title {
   margin-bottom: var(--space-xs);
+}
+.Header__Action {
+  display: flex;
+  flex-shrink: 0;
 }
 .Header__Button {
   margin-right: 8px;
@@ -229,11 +248,32 @@
   margin-right: var(--space-m);
   margin-left: var(--space-m);
 }
+
+@media (min-width: 600px) {
+  .Layout__Container {
+    margin-right: 50px;
+    margin-left: 50px;
+  }
+}
+
+@media (min-width: 900px) {
+  .Layout__Container {
+    margin-right: 100px;
+    margin-left: 100px;
+    max-width: 825px;
+  }
+}
 .Text_size_l {
   font-size: var(--text-size-l);
   line-height: var(--line-height-size-xs);
 }
 
+@media (min-width: 900px) {
+  .Text_size_l {
+    font-size: var(--text-size-xl);
+    line-height: var(--line-height-size-m);
+  }
+}
 .Text_size_m {
   font-size: var(--text-size-m);
   line-height: var(--line-height-size-m);
@@ -246,6 +286,13 @@
 .Text_size_xl {
   font-size: var(--text-size-xl);
   line-height: var(--line-height-size-xl);
+}
+
+@media (min-width: 900px) {
+  .Text_size_xl {
+    font-size: var(--text-size-xxl);
+    line-height: var(--line-height-size-xxl);
+  }
 }
 .Text_view_fail {
   color: var(--color-text-fail);
@@ -284,7 +331,7 @@
   --yellow-600: #eec50a;
   --yellow-500: #fbcf0b; /*color-bg-action*/
   --orange-500: #F99C13;
-  --red-500: #f7333a;
+  --red-500: #f6333a;
   --red-600: #d80015;
   --green-500: #33b53e;
 
@@ -294,6 +341,8 @@
   --color-text-disabled: var(--gray-700);
   --color-text-ghost: var(--gray-800);
   --color-text-success: var(--green-500);
+  --color-text-progress: var(--orange-500);
+  --color-text-fail: var(--red-500);
   --color-text-required: var(--red-500);
 
   --color-bg-primary: var(--white);
@@ -323,12 +372,14 @@
   --text-size-m: 15px;
   --text-size-l: 16px;
   --text-size-xl: 18px;
+  --text-size-xxl: 24px;
 
   /* line-height */
   --line-height-size-xs: 16px;
   --line-height-size-s: 18px;
   --line-height-size-m: 20px;
   --line-height-size-xl: 22px;
+  --line-height-size-xxl: 28px;
 
   /* breakpoints */
   --breakpoint-size-s: 320px;
@@ -358,24 +409,54 @@
 body {
   margin: 0;
 }
+.BuildCard__Status_status_fail {
+  fill: var(--color-text-fail);
+}
+.BuildCard__Status_status_progress {
+  fill: var(--color-text-progress);
+}
+.BuildCard__Status_status_success {
+  fill: var(--color-text-success);
+}
 .BuildCard {
   padding: 16px 12px;
   box-shadow: 0px 1px 1px rgba(67, 68, 69, 0.3), 0px 0px 1px rgba(67, 68, 69, 0.3);
   border-radius: 6px;
   margin-bottom: 8px;
 }
-.BuildHistory {
-  display: flex;
-  flex-direction: column;
+
+.BuildCard:last-child {
+  margin-bottom: 0;
+}
+
+@media (min-width: 900px) {
+  .BuildCard {
+    padding: 12px 24px;
+  }
+}
+@media (min-width: 900px) {
+  .BuildDetails {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media (min-width: 900px) {
+  .BuildHistory {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .Builds {
   margin-top: 8px;
+  margin-bottom: 8px;
   list-style: none;
   padding-left: 0;
+  display: flex;
+  flex-direction: column;
 }
 .Field {
-  padding-top: var(--space-xs);
-  padding-bottom: var(--space-xs);
+  padding-top: 10px;
+  padding-bottom: 8px;
   position: relative;
 }
 
@@ -386,10 +467,28 @@ body {
 .Logs {
   overflow: auto;
   background-color: var(--color-bg-code);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 900px) {
+  .Logs {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .Settings {
   margin-top: 14px;
+  max-width: 474px;
 }
+
+@media (min-width: 900px) {
+  .Settings {
+    margin-top: 8px;
+  }
+}
+
+
 .SettingsPreview {
   display: flex;
   flex-direction: column;
@@ -417,6 +516,15 @@ body {
   opacity: 0.65;
 }
 
+@media (min-width: 900px) {
+  /* .BuildCard__BuildDateTime {
+    flex-direction: column;
+  } */
+
+  .BuildCard_status_list .BuildCard__BuildDateTime {
+    flex-direction: column;
+  }
+}
 .BuildCard__Commit {
   opacity: 0.65;
 }
@@ -425,36 +533,112 @@ body {
   align-items: center;
   margin-bottom: 8px;
 }
+
+@media (min-width: 900px) {
+  .BuildCard__CommitInfo {
+    margin-bottom: 0;
+    margin-right: 10px;
+  };
+}
 .BuildCard__Content {
   position: relative;
   padding-left: 24px;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Content {
+    padding-left: 32px;
+  }
+
+  .BuildCard_status_list .BuildCard__Content {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .BuildCard__DateInfo {
   display: flex;
   align-items: center;
   margin-right: 4px;
 }
+
+@media (min-width: 900px) {
+  .BuildCard_status_list .BuildCard__DateInfo {
+    margin-bottom: 12px;
+    margin-right: 0;
+  };
+}
 .BuildCard__Description {
   margin-top: 0;
   margin-bottom: 8px;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Description {
+    margin-bottom: 0;
+  }
 }
 .BuildCard__Git {
   margin-bottom: 8px;
   display: flex;
   flex-direction: column;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #f1f2f3;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Git {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .BuildCard_status_list .BuildCard__Git {
+    border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
 }
 .BuildCard__Icon {
   fill: var(--color-icon-secondary);
   margin-right: 4px;
 }
+.BuildCard__Info {
+  
+}
+.BuildCard__Main {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 8px;
+  };
+}
 .BuildCard__Number {
   line-height: var(--line-height-size-xs);
   margin-bottom: 8px;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Number {
+    margin-bottom: 0;
+    margin-right: 4px;
+  }
 }
 .BuildCard__Status {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+@media (min-width: 900px) {
+  .BuildCard__Status {
+    width: 22px;
+    height: 22px;
+  }
 }
 .BuildCard__TimeInfo {
   display: flex;
@@ -464,10 +648,11 @@ body {
   display: flex;
   align-items: center;
 }
+
 .Field__Button {
   position: absolute;
-  right: 0;
-  top: 28px;
+  right: 2px;
+  top: 30px;
 }
 .Field__Label {
   margin-bottom: 4px;
@@ -490,6 +675,10 @@ body {
 .Field_align_line .Field__Control {
   margin-right: var(--space-xs);
   width: 52px;
+}
+.Settings__SyncTimeField {
+  margin-top: 8px;
+  margin-bottom: 12px;
 }
 .SettingsPreview__Description {
   line-height: var(--line-height-size-xs);
