--- a/css/common.blocks/Button/_type/Button_type_action.css
+++ b/css/common.blocks/Button/_type/Button_type_action.css
@@ -1,5 +1,5 @@
 .Button_type_action .Button__Text {
-  margin-right: 13px;
+  margin-right: var(--space-2xs);
   margin-left: -3px;
   display: none;
 }
