--- a/css/content.blocks/BuildCard/__Description/BuildCard__Description.css
+++ b/css/content.blocks/BuildCard/__Description/BuildCard__Description.css
@@ -1,6 +1,6 @@
 .BuildCard__Description {
   margin-top: 0;
-  margin-bottom: 8px;
+  margin-bottom: var(--space-6xs);
 }
 
 @media (min-width: 900px) {
