--- a/css/common.blocks/Button/_view/Button_view_default.css
+++ b/css/common.blocks/Button/_view/Button_view_default.css
@@ -2,5 +2,5 @@
   background-color: var(--color-bg-control);
   color: var(--color-text-primary);
   border-color: var(--color-bg-control);
-  font-size: 13px;
+  font-size: var(--text-size-s);
 }
