--- a/css/common.blocks/Form/__Action/Form__Action.css
+++ b/css/common.blocks/Form/__Action/Form__Action.css
@@ -1,6 +1,6 @@
 .Form__Action {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: var(--space-3xs);
+  padding-bottom: var(--space-3xs);
   display: flex;
   flex-direction: column;
 }
