--- a/css/common.blocks/Input/Input.css
+++ b/css/common.blocks/Input/Input.css
@@ -6,14 +6,14 @@
   border: 2px solid var(--color-border-default);
   color: var(--color-text-primary);
   box-sizing: border-box;
-  padding: 11px 13px;
-  font-size: 13px;
-  line-height: 15px;
+  padding: var(--space-4xs) var(--space-2xs);
+  font-size: var(--text-size-s);
+  line-height: var(--line-height-size-2xs);
 }
 
 .Input::placeholder {
   color: var(--color-text-primary);
   opacity: 0.2;
-  font-size: 13px;
-  line-height: 15px;
+  font-size: var(--text-size-s);
+  line-height: var(--line-height-size-2xs);
 }
