--- a/css/common.blocks/Layout/__Container/Layout__Container.css
+++ b/css/common.blocks/Layout/__Container/Layout__Container.css
@@ -5,15 +5,15 @@
 
 @media (min-width: 600px) {
   .Layout__Container {
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: var(--space-3xl);
+    margin-left: var(--space-3xl);
   }
 }
 
 @media (min-width: 900px) {
   .Layout__Container {
-    margin-right: 100px;
-    margin-left: 100px;
-    max-width: 825px;
+    margin-right: var(--space-6xl);
+    margin-left: var(--space-6xl);
+    max-width: var(--container-size);
   }
 }
