--- a/css/content.blocks/BuildCard/BuildCard.css
+++ b/css/content.blocks/BuildCard/BuildCard.css
@@ -1,8 +1,8 @@
 .BuildCard {
-  padding: 16px 12px;
-  box-shadow: 0px 1px 1px rgba(67, 68, 69, 0.3), 0px 0px 1px rgba(67, 68, 69, 0.3);
-  border-radius: 6px;
-  margin-bottom: 8px;
+  padding: var(--space-m) var(--space-3xs);
+  box-shadow: var(--build-card-shadow-default);
+  border-radius: var(--radius-l);
+  margin-bottom: var(--space-6xs);
 }
 
 .BuildCard:last-child {
@@ -11,6 +11,6 @@
 
 @media (min-width: 900px) {
   .BuildCard {
-    padding: 12px 24px;
+    padding: var(--space-3xs) var(--space-xl);
   }
 }
