--- a/css/content.blocks/BuildCard/__Content/BuildCard__Content.css
+++ b/css/content.blocks/BuildCard/__Content/BuildCard__Content.css
@@ -1,11 +1,11 @@
 .BuildCard__Content {
   position: relative;
-  padding-left: 24px;
+  padding-left: var(--space-xl);
 }
 
 @media (min-width: 900px) {
   .BuildCard__Content {
-    padding-left: 32px;
+    padding-left: var(--space-2xl);
   }
 
   .BuildCard_status_list .BuildCard__Content {
