--- a/css/content.blocks/BuildCard/__Main/BuildCard__Main.css
+++ b/css/content.blocks/BuildCard/__Main/BuildCard__Main.css
@@ -8,6 +8,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 8px;
+    margin-bottom: var(--space-6xs);
   };
 }
