--- a/css/content.blocks/BuildCard/__Number/BuildCard__Number.css
+++ b/css/content.blocks/BuildCard/__Number/BuildCard__Number.css
@@ -1,11 +1,11 @@
 .BuildCard__Number {
   line-height: var(--line-height-size-xs);
-  margin-bottom: 8px;
+  margin-bottom: var(--space-6xs);
 }
 
 @media (min-width: 900px) {
   .BuildCard__Number {
     margin-bottom: 0;
-    margin-right: 4px;
+    margin-right: var(--space-8xs);
   }
 }
