--- a/css/content.blocks/SettingsPreview/__Description/SettingsPreview__Description.css
+++ b/css/content.blocks/SettingsPreview/__Description/SettingsPreview__Description.css
@@ -1,5 +1,5 @@
 .SettingsPreview__Description {
   line-height: var(--line-height-size-xs);
   text-align: center;
-  margin-bottom: 24px;
+  margin-bottom: var(--space-xl);
 }
