--- a/style.css
+++ b/style.css
@@ -45,8 +45,11 @@
 
 @media (min-width: 900px) {
   .Footer {
-    padding: 6px 100px;
+    padding: var(--space-7xs) 100px;
   }
+}
+.Form {
+  max-width: 474px;
 }
 .Header {
   box-sizing: border-box;
@@ -61,7 +64,7 @@
 
 @media (min-width: 900px) {
   .Header {
-    padding: 10px 100px;
+    padding: var(--space-5xs) 100px;
   }
 }
 .Input {
@@ -137,8 +140,8 @@
   }
 }
 .Button_type_default {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: var(--space-l);
+  padding-right: var(--space-l);
 }
 .Button_view_default {
   background-color: var(--color-bg-control);
@@ -174,16 +177,6 @@
   text-decoration: none;
 }
 
-.Footer__Links {
-  display: flex;
-  margin-bottom: var(--space-xs);
-}
-
-@media (min-width: 900px) {
-  .Footer__Links {
-    margin-bottom: 0;
-  }
-}
 .Form__Action {
   padding-top: 12px;
   padding-bottom: 12px;
@@ -205,7 +198,7 @@
   margin-bottom: 14px;
 } */
 .Form__Header {
-  margin-bottom: 4px;
+  margin-bottom: var(--space-8xs);
 }
 .Form__SubmitButton {
   margin-bottom: 12px;
@@ -243,6 +236,16 @@
 }
 .Input_state_focused {
   border-color: var(--color-border-focused);
+}
+.Footer__Links {
+  display: flex;
+  margin-bottom: var(--space-xs);
+}
+
+@media (min-width: 900px) {
+  .Footer__Links {
+    margin-bottom: 0;
+  }
 }
 .Layout__Container {
   margin-right: var(--space-m);
@@ -418,9 +421,14 @@ body {
 .BuildCard__Status_status_success {
   fill: var(--color-text-success);
 }
+@media (min-width: 900px) {
+  .BuildDetails {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 .BuildCard {
   padding: 16px 12px;
-  box-shadow: 0px 1px 1px rgba(67, 68, 69, 0.3), 0px 0px 1px rgba(67, 68, 69, 0.3);
   border-radius: 6px;
   margin-bottom: 8px;
 }
@@ -434,18 +442,6 @@ body {
     padding: 12px 24px;
   }
 }
-@media (min-width: 900px) {
-  .BuildDetails {
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
-@media (min-width: 900px) {
-  .BuildHistory {
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
 .Builds {
   margin-top: 8px;
   margin-bottom: 8px;
@@ -454,15 +450,11 @@ body {
   display: flex;
   flex-direction: column;
 }
-.Field {
-  padding-top: 10px;
-  padding-bottom: 8px;
-  position: relative;
-}
-
-.Logo {
-  width: 124px;
-  height: 124px;
+@media (min-width: 900px) {
+  .BuildHistory {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .Logs {
   overflow: auto;
@@ -479,12 +471,13 @@ body {
 }
 .Settings {
   margin-top: 14px;
-  max-width: 474px;
 }
 
 @media (min-width: 900px) {
   .Settings {
     margin-top: 8px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -499,12 +492,24 @@ body {
 @media (min-width: 900px) {
   .SettingsPreview {
     margin-top: 206px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 .Title {
   margin-bottom: 0;
   margin-top: 0;
+}
+.Field {
+  padding-top: var(--space-5xs);
+  padding-bottom: 8px;
+  position: relative;
+}
+
+.Logo {
+  width: 124px;
+  height: 124px;
 }
 .BuildCard__Branch {
   margin-right: 4px;
@@ -537,7 +542,7 @@ body {
 @media (min-width: 900px) {
   .BuildCard__CommitInfo {
     margin-bottom: 0;
-    margin-right: 10px;
+    margin-right: var(--space-5xs);
   };
 }
 .BuildCard__Content {
@@ -554,18 +559,6 @@ body {
     display: flex;
     justify-content: space-between;
   }
-}
-.BuildCard__DateInfo {
-  display: flex;
-  align-items: center;
-  margin-right: 4px;
-}
-
-@media (min-width: 900px) {
-  .BuildCard_status_list .BuildCard__DateInfo {
-    margin-bottom: 12px;
-    margin-right: 0;
-  };
 }
 .BuildCard__Description {
   margin-top: 0;
@@ -649,6 +642,30 @@ body {
   align-items: center;
 }
 
+.Settings__SyncTimeField {
+  margin-top: 8px;
+  margin-bottom: 12px;
+}
+.BuildCard__DateInfo {
+  display: flex;
+  align-items: center;
+  margin-right: 4px;
+}
+
+@media (min-width: 900px) {
+  .BuildCard_status_list .BuildCard__DateInfo {
+    margin-bottom: 12px;
+    margin-right: 0;
+  };
+}
+.SettingsPreview__Description {
+  line-height: var(--line-height-size-xs);
+  text-align: center;
+  margin-bottom: 24px;
+}
+.SettingsPreview__Logo {
+  margin-bottom: 32px;
+}
 .Field__Button {
   position: absolute;
   right: 2px;
@@ -675,16 +692,4 @@ body {
 .Field_align_line .Field__Control {
   margin-right: var(--space-xs);
   width: 52px;
-}
-.Settings__SyncTimeField {
-  margin-top: 8px;
-  margin-bottom: 12px;
-}
-.SettingsPreview__Description {
-  line-height: var(--line-height-size-xs);
-  text-align: center;
-  margin-bottom: 24px;
-}
-.SettingsPreview__Logo {
-  margin-bottom: 32px;
 }
