--- a/css/content.blocks/BuildCard/BuildCard.css
+++ b/css/content.blocks/BuildCard/BuildCard.css
@@ -5,6 +5,10 @@
   margin-bottom: var(--space-6xs);
 }
 
+.BuildCard:hover {
+  box-shadow: var(--build-card-shadow-hovered);
+}
+
 .BuildCard:last-child {
   margin-bottom: 0;
 }
