--- a/style.css
+++ b/style.css
@@ -39,17 +39,17 @@
 
 @media (min-width: 600px) {
   .Footer {
-    padding: 12px 50px;
+    padding: var(--space-3xs) var(--space-3xl);
   }
 }
 
 @media (min-width: 900px) {
   .Footer {
-    padding: var(--space-7xs) 100px;
+    padding: var(--space-7xs) var(--space-6xl);
   }
 }
 .Form {
-  max-width: 474px;
+  max-width: var(--content-size);
 }
 .Header {
   box-sizing: border-box;
@@ -58,13 +58,13 @@
 
 @media (min-width: 600px) {
   .Header {
-    padding: 15px 50px;
+    padding: var(--space-s) var(--space-3xl);
   }
 }
 
 @media (min-width: 900px) {
   .Header {
-    padding: var(--space-5xs) 100px;
+    padding: var(--space-5xs) var(--space-6xl);
   }
 }
 .Input {
@@ -75,27 +75,31 @@
   border: 2px solid var(--color-border-default);
   color: var(--color-text-primary);
   box-sizing: border-box;
-  padding: 11px 13px;
-  font-size: 13px;
-  line-height: 15px;
+  padding: var(--space-4xs) var(--space-2xs);
+  font-size: var(--text-size-s);
+  line-height: var(--line-height-size-2xs);
 }
 
 .Input::placeholder {
   color: var(--color-text-primary);
   opacity: 0.2;
-  font-size: 13px;
-  line-height: 15px;
+  font-size: var(--text-size-s);
+  line-height: var(--line-height-size-2xs);
 }
 
+.Input:focus {
+  outline: none;
+  border-color: var(--color-border-focused);
+}
 .Layout {
-  padding-bottom: 84px;
+  padding-bottom: var(--space-4xl);
 }
 .Text {
   margin-top: 0;
   margin-bottom: 0;
 }
 .Button__Icon {
-  padding: 8px;
+  padding: var(--space-6xs);
   display: flex;
   box-sizing: border-box;
 }
@@ -111,25 +115,25 @@
 }
 
 .Button_size_m .Button_view_submit {
-  line-height: 36px;
+  line-height: var(--line-height-size-3xl);
 }
 
 .Button_size_m .Button_view_default {
-  line-height: 36px;
+  line-height: var(--line-height-size-3xl);
 }
 .Button_size_s {
   height: 28px;
 }
 
 .Button_size_s .Button_view_submit {
-  line-height: 36px;
+  line-height: var(--line-height-size-3xl);
 }
 
 .Button_size_s .Button_view_default {
-  line-height: 36px;
+  line-height: var(--line-height-size-3xl);
 }
 .Button_type_action .Button__Text {
-  margin-right: 13px;
+  margin-right: var(--space-2xs);
   margin-left: -3px;
   display: none;
 }
@@ -146,14 +150,46 @@
 .Button_view_default {
   background-color: var(--color-bg-control);
   color: var(--color-text-primary);
-  border-color: var(--color-bg-control);
-  font-size: 13px;
+  border: 2px solid var(--color-bg-control);
+  font-size: var(--text-size-s);
+}
+
+.Button_view_default:hover {
+  background-color: var(--color-bg-control-hovered);
+  border: 2px solid var(--color-bg-control-hovered);
+}
+
+.Button_view_default:focus {
+  outline: none;
+  background-color: var(--color-bg-control);
+  border: 2px solid var(--color-border-focused);
+}
+
+.Button_view_default:disabled {
+  background-color: var(--color-bg-disabled);
+  border: 2px solid var(--color-bg-disabled);
 }
 .Button_view_submit {
   background-color: var(--color-bg-action);
   color: var(--color-text-primary);
-  border-color: var(--color-bg-action);
-  font-size: 13px;
+  border: 2px solid var(--color-bg-action);
+  font-size: var(--text-size-s);
+}
+
+.Button_view_submit:hover {
+  background-color: var(--color-bg-action-hovered);
+  border: 2px solid var(--color-bg-action-hovered);
+}
+
+.Button_view_submit:focus {
+  outline: none;
+  background-color: var(--color-bg-action);
+  border: 2px solid var(--color-border-action-focused);
+}
+
+.Button_view_submit:disabled {
+  background-color: var(--color-bg-disabled);
+  border: 2px solid var(--color-bg-disabled);
 }
 .Button_width_full {
   width: 100%;
@@ -167,7 +203,7 @@
 
 @media (min-width: 900px) {
   .Footer__Content {
-    max-width: 825px;
+    max-width: var(--container-size);
     flex-direction: row;
   }
 }
@@ -177,9 +213,22 @@
   text-decoration: none;
 }
 
+.Footer__Link:hover {
+  color: var(--color-link-hovered);
+}
+.Footer__Links {
+  display: flex;
+  margin-bottom: var(--space-xs);
+}
+
+@media (min-width: 900px) {
+  .Footer__Links {
+    margin-bottom: 0;
+  }
+}
 .Form__Action {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: var(--space-3xs);
+  padding-bottom: var(--space-3xs);
   display: flex;
   flex-direction: column;
 }
@@ -192,22 +241,22 @@
   }
 }
 .Form__Content {
-  margin-bottom: 4px;
+  margin-bottom: var(--space-8xs);
 }
 /* .Form__Description {
-  margin-bottom: 14px;
+  margin-bottom: var(--space-xs);
 } */
 .Form__Header {
   margin-bottom: var(--space-8xs);
 }
 .Form__SubmitButton {
-  margin-bottom: 12px;
+  margin-bottom: var(--space-3xs);
 }
 
 @media (min-width: 600px) {
   .Form__SubmitButton {
     margin-bottom: 0;
-    margin-right: 8px;
+    margin-right: var(--space-6xs);
   }
 }
 .Form__Title {
@@ -218,7 +267,7 @@
   flex-shrink: 0;
 }
 .Header__Button {
-  margin-right: 8px;
+  margin-right: var(--space-6xs);
 }
 .Header__Content {
   display: flex;
@@ -228,24 +277,11 @@
 
 @media (min-width: 900px) {
   .Header__Content {
-    max-width: 825px;
+    max-width: var(--container-size);
   }
 }
 .Header__Title {
-  margin-right: 8px;
-}
-.Input_state_focused {
-  border-color: var(--color-border-focused);
-}
-.Footer__Links {
-  display: flex;
-  margin-bottom: var(--space-xs);
-}
-
-@media (min-width: 900px) {
-  .Footer__Links {
-    margin-bottom: 0;
-  }
+  margin-right: var(--space-6xs);
 }
 .Layout__Container {
   margin-right: var(--space-m);
@@ -254,16 +290,16 @@
 
 @media (min-width: 600px) {
   .Layout__Container {
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: var(--space-3xl);
+    margin-left: var(--space-3xl);
   }
 }
 
 @media (min-width: 900px) {
   .Layout__Container {
-    margin-right: 100px;
-    margin-left: 100px;
-    max-width: 825px;
+    margin-right: var(--space-6xl);
+    margin-left: var(--space-6xl);
+    max-width: var(--container-size);
   }
 }
 .Text_size_l {
@@ -331,7 +367,7 @@
   --blue-gray-500: #7f8285;/*color-bg-secondary*/
   --blue-gray-50: #f0f2f3;
   --yellow-700: #b09105;
-  --yellow-600: #eec50a;
+  --yellow-600: #eec40a;
   --yellow-500: #fbcf0b; /*color-bg-action*/
   --orange-500: #F99C13;
   --red-500: #f6333a;
@@ -348,27 +384,43 @@
   --color-text-fail: var(--red-500);
   --color-text-required: var(--red-500);
 
+  --color-link-hovered: var(--red-600);
+
   --color-bg-primary: var(--white);
   --color-bg-secondary: var(--blue-gray-50);
   --color-bg-control: var(--gray-150);
   --color-bg-control-hovered: var(--gray-200);
   --color-bg-disabled: var(--gray-50);
-  --color-border-default: var(--gray-250);
   --color-bg-action: var(--yellow-500);
   --color-bg-action-hovered: var(--yellow-600);
   --color-bg-close-icon: var(--gray-400);
   --color-bg-code: var(--gray-50);
 
+  --color-border-action: var(--yellow-500);
   --color-border-action-focused: var(--yellow-700);
-  --color-border-focused: var(--gray-500);
   --color-border-default: var(--gray-250);
+  --color-border-focused: var(--gray-500);
   --color-icon-secondary: var(--gray-500);
 
   /* space */
-  --space-xxs: 4px;
-  --space-xs: 8px;
-  --space-s: 12px;
+  --space-8xs: 4px;
+  --space-7xs: 6px;
+  --space-6xs: 8px;
+  --space-5xs: 10px;
+  --space-4xs: 11px;
+  --space-3xs: 12px;
+  --space-2xs: 13px;
+  --space-xs: 14px;
+  --space-s: 15px;
   --space-m: 16px;
+  --space-l: 20px;
+  --space-xl: 24px;
+  --space-2xl: 32px;
+  --space-3xl: 50px;
+  --space-4xl: 84px;
+  --space-5xl: 94px;
+  --space-6xl: 100px;
+  --space-7xl: 206px;
 
   /* text-size */
   --text-size-s: 13px;
@@ -378,35 +430,31 @@
   --text-size-xxl: 24px;
 
   /* line-height */
+  --line-height-size-2xs: 15px;
   --line-height-size-xs: 16px;
   --line-height-size-s: 18px;
   --line-height-size-m: 20px;
   --line-height-size-xl: 22px;
   --line-height-size-xxl: 28px;
+  --line-height-size-3xl: 36px;
 
   /* breakpoints */
-  --breakpoint-size-s: 320px;
   --content-size: 474px;
+  --container-size: 825px;
 
   /* border-radius */
   --radius-s: 2px;
   --radius-m: 4px;
+  --radius-l: 6px;
+
+  /* box-shadow */
+  --build-card-shadow-default: 0px 1px 1px rgba(67, 68, 69, 0.3), 0px 0px 1px rgba(67, 68, 69, 0.3);
+  --build-card-shadow-hovered: 0px 2px 8px rgba(67, 68, 69, 0.3), 0px 0px 1px rgba(67, 68, 69, 0.3);
 
   /* fonts */
   --font-family: 'YS Text';
 
   font-family: var(--font-family);
-
-
-  /* --settings-button: #e6e6e6;
-  --icon: #E5E5E5;
-  --footer: #F0F2F3;
-  --open-settings: #FBCF0B;
-  --success: #5ECC78;
-  --fail: #F77073;
-  --progress: #FABA4F;
-  --show-more: #EDEDED;
-  --show-more-mobile: #E6E6E6; */
 }
 
 body {
@@ -421,16 +469,15 @@ body {
 .BuildCard__Status_status_success {
   fill: var(--color-text-success);
 }
-@media (min-width: 900px) {
-  .BuildDetails {
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
 .BuildCard {
-  padding: 16px 12px;
-  border-radius: 6px;
-  margin-bottom: 8px;
+  padding: var(--space-m) var(--space-3xs);
+  box-shadow: var(--build-card-shadow-default);
+  border-radius: var(--radius-l);
+  margin-bottom: var(--space-6xs);
+}
+
+.BuildCard:hover {
+  box-shadow: var(--build-card-shadow-hovered);
 }
 
 .BuildCard:last-child {
@@ -439,22 +486,38 @@ body {
 
 @media (min-width: 900px) {
   .BuildCard {
-    padding: 12px 24px;
+    padding: var(--space-3xs) var(--space-xl);
   }
 }
-.Builds {
-  margin-top: 8px;
-  margin-bottom: 8px;
-  list-style: none;
-  padding-left: 0;
-  display: flex;
-  flex-direction: column;
+@media (min-width: 900px) {
+  .BuildDetails {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 @media (min-width: 900px) {
   .BuildHistory {
     margin-right: auto;
     margin-left: auto;
   }
+}
+.Builds {
+  margin-top: var(--space-6xs);
+  margin-bottom: var(--space-6xs);
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+}
+.Field {
+  padding-top: var(--space-5xs);
+  padding-bottom: var(--space-6xs);
+  position: relative;
+}
+
+.Logo {
+  width: 124px;
+  height: 124px;
 }
 .Logs {
   overflow: auto;
@@ -470,12 +533,12 @@ body {
   }
 }
 .Settings {
-  margin-top: 14px;
+  margin-top: var(--space-xs);
 }
 
 @media (min-width: 900px) {
   .Settings {
-    margin-top: 8px;
+    margin-top: var(--space-6xs);
     margin-left: auto;
     margin-right: auto;
   }
@@ -486,12 +549,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 94px;
+  margin-top: var(--space-5xl);
 }
 
 @media (min-width: 900px) {
   .SettingsPreview {
-    margin-top: 206px;
+    margin-top: var(--space-7xl);
     margin-left: auto;
     margin-right: auto;
   }
@@ -501,19 +564,9 @@ body {
   margin-bottom: 0;
   margin-top: 0;
 }
-.Field {
-  padding-top: var(--space-5xs);
-  padding-bottom: 8px;
-  position: relative;
-}
-
-.Logo {
-  width: 124px;
-  height: 124px;
-}
 .BuildCard__Branch {
-  margin-right: 4px;
-  line-height: 16px;
+  margin-right: var(--space-8xs);
+  line-height: var(--space-m);
 }
 .BuildCard__BuildDateTime {
   display: flex;
@@ -536,7 +589,7 @@ body {
 .BuildCard__CommitInfo {
   display: flex;
   align-items: center;
-  margin-bottom: 8px;
+  margin-bottom: var(--space-6xs);
 }
 
 @media (min-width: 900px) {
@@ -547,12 +600,12 @@ body {
 }
 .BuildCard__Content {
   position: relative;
-  padding-left: 24px;
+  padding-left: var(--space-xl);
 }
 
 @media (min-width: 900px) {
   .BuildCard__Content {
-    padding-left: 32px;
+    padding-left: var(--space-2xl);
   }
 
   .BuildCard_status_list .BuildCard__Content {
@@ -560,9 +613,21 @@ body {
     justify-content: space-between;
   }
 }
+.BuildCard__DateInfo {
+  display: flex;
+  align-items: center;
+  margin-right: var(--space-8xs);
+}
+
+@media (min-width: 900px) {
+  .BuildCard_status_list .BuildCard__DateInfo {
+    margin-bottom: var(--space-3xs);
+    margin-right: 0;
+  };
+}
 .BuildCard__Description {
   margin-top: 0;
-  margin-bottom: 8px;
+  margin-bottom: var(--space-6xs);
 }
 
 @media (min-width: 900px) {
@@ -571,10 +636,10 @@ body {
   }
 }
 .BuildCard__Git {
-  margin-bottom: 8px;
+  margin-bottom: var(--space-6xs);
   display: flex;
   flex-direction: column;
-  padding-bottom: 8px;
+  padding-bottom: var(--space-6xs);
   border-bottom: 1px solid #f1f2f3;
 }
 
@@ -592,7 +657,7 @@ body {
 }
 .BuildCard__Icon {
   fill: var(--color-icon-secondary);
-  margin-right: 4px;
+  margin-right: var(--space-8xs);
 }
 .BuildCard__Info {
   
@@ -607,18 +672,18 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 8px;
+    margin-bottom: var(--space-6xs);
   };
 }
 .BuildCard__Number {
   line-height: var(--line-height-size-xs);
-  margin-bottom: 8px;
+  margin-bottom: var(--space-6xs);
 }
 
 @media (min-width: 900px) {
   .BuildCard__Number {
     margin-bottom: 0;
-    margin-right: 4px;
+    margin-right: var(--space-8xs);
   }
 }
 .BuildCard__Status {
@@ -642,37 +707,16 @@ body {
   align-items: center;
 }
 
-.Settings__SyncTimeField {
-  margin-top: 8px;
-  margin-bottom: 12px;
-}
-.BuildCard__DateInfo {
-  display: flex;
-  align-items: center;
-  margin-right: 4px;
-}
-
-@media (min-width: 900px) {
-  .BuildCard_status_list .BuildCard__DateInfo {
-    margin-bottom: 12px;
-    margin-right: 0;
-  };
-}
-.SettingsPreview__Description {
-  line-height: var(--line-height-size-xs);
-  text-align: center;
-  margin-bottom: 24px;
-}
-.SettingsPreview__Logo {
-  margin-bottom: 32px;
-}
 .Field__Button {
   position: absolute;
   right: 2px;
   top: 30px;
 }
+.Field__Control:placeholder-shown + .Field__Button {
+  display: none;
+}
 .Field__Label {
-  margin-bottom: 4px;
+  margin-bottom: var(--space-8xs);
 }
 .Field__Measure {
   color: var(--color-text-ghost);
@@ -692,4 +736,16 @@ body {
 .Field_align_line .Field__Control {
   margin-right: var(--space-xs);
   width: 52px;
+}
+.Settings__SyncTimeField {
+  margin-top: var(--space-6xs);
+  margin-bottom: var(--space-3xs);
+}
+.SettingsPreview__Description {
+  line-height: var(--line-height-size-xs);
+  text-align: center;
+  margin-bottom: var(--space-xl);
+}
+.SettingsPreview__Logo {
+  margin-bottom: var(--space-2xl);
 }
