--- a/css/common.blocks/Button/Button.css
+++ b/css/common.blocks/Button/Button.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding: var(--space-xs); */
+  padding: 0;
   border-radius: var(--radius-m);
   text-decoration: none;
 }
